<resources>
    <string name="app_name">Comic Tour Brussels</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_nav_list">Comic List</string>
    <string name="txt_nav_map">Map</string>
    <string name="txt_nav_about">About</string>
    <string name="txt_nav_setttings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_about_title">About</string>
    <string name="txt_about_explanation" />
    <string name="txt_about_authors">Authors</string>
    <string name="txt_about_partners">Partners:</string>
    <string name="txt_menu_search">Search</string>
    <string name="text_title_details">Details</string>
    <string name="txt_details_personage">Personage:</string>
    <string name="txt_details_author">Author:</string>
    <string name="text_details_description">Description</string>
    <string name="text_details_describe">Description:</string>
    <string name="txt_lbl_details">Details</string>
    <string name="txt_about_jorn">Jorn Rymenans</string>
    <string name="txt_button_visited">Visited</string>
    <string name="txt_tv_visited">Click if visited</string>
    <string name="nav_title">Comic Tour</string>
    <string name="txt_btn_wc">Toilet</string>
    <string name="txt_btn_todo">To do</string>
    <string name="txt_btn_visited">Visited</string>
    <string name="txt_about_pieter">Pieter  Vanhoof</string>
    <string name="txt_about_carine">Carine Fulakula</string>
    <string name="txt_about_ehb">Ehb, departement DT</string>
    <string name="txt_about_vdab">VDAB</string>
    <string name="txt_image_description">Image Comic</string>
    <string name="txt_infowindow_personage">Personage</string>
    <string name="contentdescription_details">Background image</string>
    <string name="imagedescription_splash">splash image</string>
    <string name="txt_splash_comicstour">Comics Tour Brussels</string>
    <string name="txt_infowindowadapter_personage">Personage:</string>
    <string name="txt_infowindowadapter_author">Author:</string>
</resources>
